--- a/Footer/Base.lproj/Main.storyboard
+++ b/Footer/Base.lproj/Main.storyboard
@@ -62,6 +62,11 @@
                                         <rect key="frame" x="89" y="22" width="159" height="32"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="starCount">
+                                                <integer key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </view>
                                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" id="VpE-Qf-J3B">
                                         <rect key="frame" x="141" y="216" width="39" height="37"/>
